# The_Starting_Point

./: .gitignore  .gitmodules  LICENSE.md  Memento.md  Pipfile  README.md  Tooolbox.sln  V-2.md  app.js  django.md  exercise.php  index.html  index.php  message.txt  package-lock.json  package.json  routes.js  server.js
001-Natours/: index.html  package.json
002-Trillo/: index.html
002-bookish/: .gitignore  package.json
003-Nexter/: index.html  package.json
01-Basics/: App.js  app.json  package-lock.json
01-Eshop-MVC/: .gitignore  app.js  nodemon.js  package-lock.json  package.json
01-spendings_manager/: package-lock.json  package.json
02-02-JavaScript/: README.md
02-1-Frontend/: package-lock.json  package.json
08-Dalgo/: .gitignore  CMakeLists.txt
08-Dalgo/C/: 02-pointers.c  03-functions.c
08-Dalgo/CPP/: 01-Reference.cpp  02-Classes.cpp  03-Template-Class.cpp  04-Recursion.cpp  05-arrays_representation.cpp
08-Dalgo/datastructure-cpp/datastructure-cpp.xcodeproj/: project.pbxproj
08-Dalgo/datastructure-cpp/datastructure-cpp.xcodeproj/project.xcworkspace/xcuserdata/nicode.xcuserdatad/: UserInterfaceState.xcuserstate
08-Dalgo/datastructure-cpp/datastructure-cpp.xcodeproj/xcuserdata/nicode.xcuserdatad/xcschemes/: xcschememanagement.plist
08-Dalgo/datastructure/datastructure/: Header.h
08-Dalgo/datastructure/datastructure.xcodeproj/project.xcworkspace/xcuserdata/nicode.xcuserdatad/: UserInterfaceState.xcuserstate
08-Dalgo/datastructure/datastructure.xcodeproj/xcuserdata/nicode.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SQL/: README.md  (+2 more)
(+1608 files in other folders)
