#cmake_minimum_required(VERSION 3.19)
#project(Dalgo C)
#
set(CMAKE_C_STANDARD 11)
#
add_executable(Dalgo
        C/01-structures.c
        C/02-pointers.c
        C/03-functions.c
        CPP/04-Recursion.cpp
        CPP/01-Reference.cpp
        CPP/02-Classes.cpp
        CPP/03-Template-Class.cpp
        CPP/04-Recursion.cpp CPP/05-arrays_representation.cpp)

